--- a/QuarkWorks Project/Base.lproj/Main.storyboard
+++ b/QuarkWorks Project/Base.lproj/Main.storyboard
@@ -99,12 +99,22 @@
                                             <outlet property="delegate" destination="BYZ-38-t0r" id="wec-vv-fAZ"/>
                                         </connections>
                                     </pickerView>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hFj-UY-QyD">
+                                        <rect key="frame" x="339" y="563" width="59" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Done"/>
+                                        <connections>
+                                            <action selector="doneClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b19-IQ-W3X"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="nX2-ab-hZe" secondAttribute="trailing" id="546-YV-DT6"/>
                                     <constraint firstItem="xT9-1H-njl" firstAttribute="centerX" secondItem="zCt-F1-GOO" secondAttribute="centerX" id="5bV-r7-alo"/>
                                     <constraint firstAttribute="bottom" secondItem="nX2-ab-hZe" secondAttribute="bottom" id="WjL-53-2ip"/>
+                                    <constraint firstItem="hFj-UY-QyD" firstAttribute="top" secondItem="nX2-ab-hZe" secondAttribute="top" constant="5" id="XYY-yR-3LZ"/>
+                                    <constraint firstItem="hFj-UY-QyD" firstAttribute="leading" secondItem="nX2-ab-hZe" secondAttribute="trailing" constant="-75" id="deo-wt-3Cg"/>
                                     <constraint firstItem="xT9-1H-njl" firstAttribute="centerY" secondItem="zCt-F1-GOO" secondAttribute="centerY" id="mQb-Wv-anm"/>
                                     <constraint firstItem="nX2-ab-hZe" firstAttribute="leading" secondItem="zCt-F1-GOO" secondAttribute="leading" id="siG-H9-409"/>
                                 </constraints>
@@ -132,6 +142,7 @@
                         <outlet property="activityIndicator" destination="xT9-1H-njl" id="iEc-Q1-ZhH"/>
                         <outlet property="activityView" destination="zCt-F1-GOO" id="QRX-3P-vYu"/>
                         <outlet property="amountLabel" destination="4ef-mU-iME" id="8VH-E8-rhr"/>
+                        <outlet property="doneButton" destination="hFj-UY-QyD" id="zju-dC-HmA"/>
                         <outlet property="pickerView" destination="nX2-ab-hZe" id="hSH-Io-xKE"/>
                         <outlet property="tableView" destination="rHU-z0-4MQ" id="jsX-yf-gXE"/>
                     </connections>
@@ -156,14 +167,14 @@
                                     <constraint firstAttribute="width" constant="200" id="wyp-cB-Nue"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoi-9x-Agy">
-                                <rect key="frame" x="183.5" y="328" width="47" height="21.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoi-9x-Agy">
+                                <rect key="frame" x="152" y="328" width="110.5" height="21.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWu-Zs-WIw">
-                                <rect key="frame" x="188.5" y="359.5" width="37.5" height="18"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWu-Zs-WIw">
+                                <rect key="frame" x="166.5" y="359.5" width="81.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
