--- a/QuarkWorks Project/Base.lproj/Main.storyboard
+++ b/QuarkWorks Project/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="E6X-xG-buA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="E6X-xG-buA">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -98,8 +98,8 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="1mm-3a-tob"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zCt-F1-GOO">
-                                <rect key="frame" x="0.0" y="319" width="414" height="543"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCt-F1-GOO">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="xT9-1H-njl">
                                         <rect key="frame" x="188.5" y="368.5" width="37" height="37"/>
@@ -115,11 +115,23 @@
                                         </connections>
                                     </pickerView>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hFj-UY-QyD">
-                                        <rect key="frame" x="339" y="563" width="59" height="31"/>
+                                        <rect key="frame" x="339" y="563" width="62.5" height="33.5"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Done"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Done">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                        </buttonConfiguration>
                                         <connections>
                                             <action selector="doneClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b19-IQ-W3X"/>
+                                        </connections>
+                                    </button>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M6h-ht-axA">
+                                        <rect key="frame" x="1" y="563" width="74" height="33.5"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Cancel">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="cancelClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2AG-Vu-43n"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -127,11 +139,13 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="nX2-ab-hZe" secondAttribute="trailing" id="546-YV-DT6"/>
                                     <constraint firstItem="xT9-1H-njl" firstAttribute="centerX" secondItem="zCt-F1-GOO" secondAttribute="centerX" id="5bV-r7-alo"/>
+                                    <constraint firstItem="M6h-ht-axA" firstAttribute="trailing" secondItem="nX2-ab-hZe" secondAttribute="leading" constant="75" id="8fi-LH-H6r"/>
                                     <constraint firstAttribute="bottom" secondItem="nX2-ab-hZe" secondAttribute="bottom" id="WjL-53-2ip"/>
                                     <constraint firstItem="hFj-UY-QyD" firstAttribute="top" secondItem="nX2-ab-hZe" secondAttribute="top" constant="5" id="XYY-yR-3LZ"/>
                                     <constraint firstItem="hFj-UY-QyD" firstAttribute="leading" secondItem="nX2-ab-hZe" secondAttribute="trailing" constant="-75" id="deo-wt-3Cg"/>
                                     <constraint firstItem="xT9-1H-njl" firstAttribute="centerY" secondItem="zCt-F1-GOO" secondAttribute="centerY" id="mQb-Wv-anm"/>
                                     <constraint firstItem="nX2-ab-hZe" firstAttribute="leading" secondItem="zCt-F1-GOO" secondAttribute="leading" id="siG-H9-409"/>
+                                    <constraint firstItem="M6h-ht-axA" firstAttribute="top" secondItem="nX2-ab-hZe" secondAttribute="top" constant="5" id="vrU-VZ-P39"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -157,6 +171,7 @@
                         <outlet property="activityIndicator" destination="xT9-1H-njl" id="iEc-Q1-ZhH"/>
                         <outlet property="activityView" destination="zCt-F1-GOO" id="QRX-3P-vYu"/>
                         <outlet property="amountLabel" destination="4ef-mU-iME" id="8VH-E8-rhr"/>
+                        <outlet property="cancelButton" destination="M6h-ht-axA" id="VQZ-Vk-ecg"/>
                         <outlet property="doneButton" destination="hFj-UY-QyD" id="zju-dC-HmA"/>
                         <outlet property="pickerView" destination="nX2-ab-hZe" id="hSH-Io-xKE"/>
                         <outlet property="tableView" destination="rHU-z0-4MQ" id="jsX-yf-gXE"/>
